--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.24",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.5",
+    "react-native-autocomplete-input": "^5.4.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
