--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "user",
     "version": "0.1.0",
     "orientation": "portrait",
-    "icon": "./assets/Tenants_App_Icon.jpg",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -12,7 +12,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "icon": "./assets/icon.png"
     },
     "android": {
       "adaptiveIcon": {
