--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-autocomplete-input": "^5.4.0",
+    "react-native-background-fetch": "^4.2.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-paper": "^5.12.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-background-fetch": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
