--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-background-fetch": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
@@ -24,8 +26,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "yup": "^1.4.0",
-    "expo-background-fetch": "~12.0.1"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
